--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://cdn.jsdelivr.net/npm/panolens@0.12.1/build/panolens.min.js
 "></script>
     <script>
 
-      const panorama = new PANOLENS.ImagePanorama( 'pano.jpg' );
+      const panorama = new PANOLENS.ImagePanorama( 'view.jpg' );
       const viewer = new PANOLENS.Viewer( { output: 'console' } );
       viewer.add( panorama );
 
